--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ MONGO_URI= "mongodb+srv://malathidasari30:p5WGloFsfHyXSarT@safety.j9w2b.mongodb.
 EMAIL_USER="malathidasari30@gmail.com"
 EMAIL_PASS="njjf uwpa uixx irkn"
 JWT_SECRET ="asdfghjkl12345"
-# client_url ="https://donation-frontend-sooty.vercel.app"
-client_url ="http://localhost:3000"
+client_url ="https://safe-frontend-kappa.vercel.app"
+# client_url ="http://localhost:3000"
